--- a/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
@@ -41,13 +41,13 @@
             />
     </LinearLayout>-->
 
-    <Button
+    <!--<Button
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@android:drawable/ic_dialog_info"
         android:id="@+id/informacionBtn"
         android:layout_gravity="right"
-        android:layout_marginRight="30dp"/>
+        android:layout_marginRight="30dp"/>-->
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -62,9 +62,7 @@
             android:drawSelectorOnTop="false"
             android:background="@color/colorPaulaComplementario"
             android:layout_gravity="center"/>
-
         <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@android:id/empty"
