--- a/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
@@ -5,6 +5,31 @@
     android:layout_height="match_parent"
     android:background="@color/colorPaula">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:weightSum="1">
+
+        <Spinner
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:popupBackground="@color/colorAccent"/>
+
+        <EditText
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/lupa"
+            android:src="@android:drawable/ic_menu_search"/>
+    </LinearLayout>
+
+    <!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,40 +39,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/proximos"
         android:layout_marginTop="20dp"
-        android:id="@+id/textView4" />
-
-   <!-- <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp">
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="19dp"
-            android:layout_height="17dp"
-            android:background="@android:drawable/arrow_down_float"
-            android:id="@+id/button" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@android:color/white"
-            android:text="@string/order"
-            android:id="@+id/textView5"
-            />
-    </LinearLayout>-->
-
-    <!--<Button
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:background="@android:drawable/ic_dialog_info"
-        android:id="@+id/informacionBtn"
-        android:layout_gravity="right"
-        android:layout_marginRight="30dp"/>-->
+        android:id="@+id/textView4" /> -->
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -63,10 +55,11 @@
             android:background="@color/colorPaulaComplementario"
             android:layout_gravity="center"/>
         <ProgressBar
-            android:layout_width="wrap_content"
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:id="@android:id/empty"
             android:layout_gravity="center"/>
 
     </FrameLayout>
+
 </LinearLayout>
